# translate-epub-ai

./: .gitignore  README.es.md  README.md  pyproject.toml  translate_epub_batch_v3.py
docs/: maintenance.md
src/translate_epub_ai/: __init__.py  __main__.py  batch_providers.py  cache.py  cli.py  constants.py  epub.py  models.py  openai_batch.py  prompting.py  utils.py  workflow.py
src/translate_epub_ai/prompts/: default_prompt.txt
tests/: test_batch_grouping.py  test_prompt_quality.py  test_prompting.py  test_providers.py
